Add skeleton for a navbar and some Bootstrap containers.

--- a/server/templates/test.html
+++ b/server/templates/test.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
 {% block bodyblock %}
-        <h3>Testing testing.. Is this thing on?</h3>
+<div class="jumbotron">
+    <h3>Testing testing.. Is this thing on?</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est enim illo laborum velit? Non autem magni at ullam odit soluta, iusto inventore dolores veniam repudiandae, provident earum et architecto eius!</p>
+</div>
 {% endblock %}
