--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -11,12 +11,10 @@
     </head>
     <body>
         <div class="container">
-            <nav class="nav">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <a class="nav-link active" href="#">Active</a>
-                <a class="nav-link" href="#">Link</a>
-                <a class="nav-link" href="#">Link</a>
-                <a class="nav-link disabled" href="#">Disabled</a>
+            <nav class="nav justify-content-center align-items-center mynav">
+                <a class="nav-link active navlink" href="#">Home</a>
+                <a class="nav-link navlink" href="#">Contact</a>
+                <a class="nav-link navlink" href="#">Projects</a>
             </nav>
             {% block bodyblock %}
             {% endblock %}
