--- a/server/templates/test.html
+++ b/server/templates/test.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
 {% block bodyblock %}
-<div class="jumbotron">
-    <h3>Testing testing.. Is this thing on?</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est enim illo laborum velit? Non autem magni at ullam odit soluta, iusto inventore dolores veniam repudiandae, provident earum et architecto eius!</p>
+<div class="jumbotron d-flex justify-content-center">
+    <h1 class="name">MARCDW'S PORTFOLIO</h1>
 </div>
 {% endblock %}
