Index projects by id. Add random string to Copyright.

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -41,7 +41,7 @@
             {% endblock %}
 
             <footer class="d-flex justify-content-center mynav myfoot">
-                <span class="copyright">Copyright © 2018 | Marc D. Wood | all sprites reserved</span>
+                <span class="copyright">Copyright © 2018 | Marc D. Wood | all {{ right }} reserved</span>
             </footer>
         </div>
 
