--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -15,7 +15,7 @@
         <div class="card-body">
             <h5 class="card-title">{{ project.title }}</h5>
             <p class="card-text">{{ project.description }}</p>
-            <a href="{{ project.url }}" class="btn btn-secondary">Go</a>
+            <a href="projects/{{ project.id }}" class="btn btn-secondary">Go</a>
         </div>
     </div>
     {% endfor %}
