--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -13,6 +13,11 @@
             crossorigin="anonymous">
         <link
             rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+            integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+            crossorigin="anonymous">
+        <link
+            rel="stylesheet"
             href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
@@ -21,7 +26,7 @@
                 <div class="d-flex justify-content-around flex-wrap navgroup">
                     <a class="nav-link active navlink" href="{{ url_for('portfolio.index') }}">Home</a>
                     <a class="nav-link navlink" href="https://github.com/metamarcdw">GitHub Profile</a>
-                    <a class="nav-link navlink" href="#">Contact</a>
+                    <a class="nav-link navlink" href="{{ url_for('portfolio.contact_view') }}">Contact</a>
                 </div>
             </nav>
             {% with messages = get_flashed_messages() %}
