Add Bio page. Open contact links in new tab.

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -24,8 +24,8 @@
         <div class="container">
             <nav class="nav justify-content-center align-items-center mynav">
                 <div class="d-flex justify-content-around flex-wrap navgroup">
-                    <a class="nav-link active navlink" href="{{ url_for('portfolio.index') }}">Home</a>
-                    <a class="nav-link navlink" href="https://github.com/metamarcdw">GitHub Profile</a>
+                    <a class="nav-link active navlink" href="{{ url_for('portfolio.home') }}">Home</a>
+                    <a class="nav-link navlink" href="{{ url_for('portfolio._portfolio') }}">Portfolio</a>
                     <a class="nav-link navlink" href="{{ url_for('portfolio.contact_view') }}">Contact</a>
                 </div>
             </nav>
