--- a/server/templates/contact.html
+++ b/server/templates/contact.html
@@ -11,10 +11,10 @@
         <h5 class="card-title">Contact Info:</h5>
         <p class="card-text d-flex justify-content-center flex-wrap myicons">
             <a href="mailto:{{ contact.email }}"><i class="fas fa-envelope-square"></i></a>
-            <a href="{{ contact.angellist }}"><i class="fab fa-angellist"></i></a>
-            <a href="{{ contact.linkedin }}"><i class="fab fa-linkedin"></i></a>
-            <a href="{{ contact.github }}"><i class="fab fa-github"></i></a>
-            <a href="{{ contact.twitter }}"><i class="fab fa-twitter"></i></a>
+            <a href="{{ contact.angellist }}" target="_blank"><i class="fab fa-angellist"></i></a>
+            <a href="{{ contact.linkedin }}" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="{{ contact.github }}" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="{{ contact.twitter }}" target="_blank"><i class="fab fa-twitter"></i></a>
         </p>
     </div>
 </div>
