--- a/server/templates/portfolio.html
+++ b/server/templates/portfolio.html
@@ -17,6 +17,10 @@
                 <h5 class="card-title">{{ project.title }}</h5>
                 <p class="card-text">{{ project.description }}</p>
                 <a href="projects/{{ project.id }}" class="btn btn-secondary">Go</a>
+                {% if logged_in %}
+                <a href="edit/{{ project.id }}" class="btn btn-primary">Edit</a>
+                <a href="delete/{{ project.id }}" class="btn btn-danger">Delete</a>
+                {% endif %}
             </div>
         </div>
         {% endfor %}
