--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -33,7 +33,7 @@
                 {% if logged_in %}
                 <div class="fixed">
                     <a href="{{ url_for('portfolio.logout') }}" class="btn btn-secondary">Logout</a>
-                    <a href="{{ url_for('portfolio.edit_project') }}" class="btn btn-primary">Edit</a>
+                    <a href="{{ url_for('portfolio.edit_project') }}" class="btn btn-success">New</a>
                 </div>
                 {% else %}
                 <button type="button" class="btn btn-secondary fixed" data-toggle="modal" data-target="#exampleModal">
