--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -33,7 +33,7 @@
                 {% if logged_in %}
                 <div class="fixed">
                     <a href="{{ url_for('portfolio.logout') }}" class="btn btn-secondary">Logout</a>
-                    <a href="{{ url_for('portfolio.edit_project') }}" class="btn btn-success">New</a>
+                    <a href="{{ url_for('portfolio.new_project') }}" class="btn btn-success">New</a>
                 </div>
                 {% else %}
                 <button type="button" class="btn btn-secondary fixed" data-toggle="modal" data-target="#exampleModal">
@@ -54,7 +54,7 @@
                         <div class="modal-content">
                             <form method="POST">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                    <h5 class="modal-title" id="exampleModalLabel">Please login:</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
@@ -62,12 +62,12 @@
                                 <div class="modal-body">
                                         <div class="form-group">
                                             <input
-                                                class="form-control"
+                                                class="form-control login-form"
                                                 name="username_input"
                                                 type="text"
                                                 placeholder="Username">
                                             <input
-                                                class="form-control"
+                                                class="form-control login-form"
                                                 name="password_input"
                                                 type="password"
                                                 placeholder="Password">
