--- a/server/templates/project.html
+++ b/server/templates/project.html
@@ -14,23 +14,25 @@
         <p class="abandoned">** Abandoned</p>
         {% endif %}
 
-        {% if project.website %}
-        <a
-            href="{{ project.website }}"
-            target="_blank"
-            class="card-link"
-        ><i class="fas fa-globe"></i> Website</a>
-        {% endif %}
-        <a
-            href="{{ project.github_url }}"
-            target="_blank"
-            class="card-link"
-        ><i class="fab fa-github"></i> GitHub Repo</a>
-        <a
-            href="#"
-            class="card-link"
-            id="backlink"
-        ><i class="fas fa-arrow-left"></i> Go Back</a>
+        <div class="d-flex flex-wrap">
+            {% if project.website %}
+            <a
+                href="{{ project.website }}"
+                target="_blank"
+                class="card-link"
+            ><i class="fas fa-globe"></i> Website</a>
+            {% endif %}
+            <a
+                href="{{ project.github_url }}"
+                target="_blank"
+                class="card-link"
+            ><i class="fab fa-github"></i> GitHub Repo</a>
+            <a
+                href="#"
+                class="card-link"
+                id="backlink"
+            ><i class="fas fa-arrow-left"></i> Go Back</a>
+        </div>
     </div>
 </div>
 {% endblock %}
