--- a/server/templates/portfolio.html
+++ b/server/templates/portfolio.html
@@ -19,7 +19,7 @@
                 <a href="projects/{{ project.id }}" class="btn btn-secondary">Go</a>
                 {% if logged_in %}
                 <a href="edit/{{ project.id }}" class="btn btn-primary">Edit</a>
-                <a href="delete/{{ project.id }}" class="btn btn-danger" id="delete-btn">Delete</a>
+                <a href="delete/{{ project.id }}" class="btn btn-danger delete-btn">Delete</a>
                 {% endif %}
             </div>
         </div>
