Center text in name and copyright styles.

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -25,6 +25,7 @@
 .name {
     font-size: 2em;
     font-weight: bold;
+    text-align: center;
     border: 5px solid black;
     padding: 0.5em;
 }
