--- a/server/templates/edit_project.html
+++ b/server/templates/edit_project.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
             {% endfor %}
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between align-items-center">
                 <button class="btn btn-secondary" type="submit">Submit</button>
                 <a
                     href="#"
