--- a/server/templates/portfolio.html
+++ b/server/templates/portfolio.html
@@ -17,7 +17,7 @@
                 <h5 class="card-title">{{ project.title }}</h5>
                 <p class="card-text">{{ project.description }}</p>
                 <a href="projects/{{ project.id }}" class="btn btn-secondary">Go</a>
-                {% if logged_in %}
+                {% if current_user.is_authenticated %}
                 <a href="edit/{{ project.id }}" class="btn btn-primary">Edit</a>
                 <a href="delete/{{ project.id }}" class="btn btn-danger delete-btn">Delete</a>
                 {% endif %}
