--- a/server/templates/portfolio.html
+++ b/server/templates/portfolio.html
@@ -21,6 +21,7 @@
                 <a href="edit/{{ project.id }}" class="btn btn-primary">Edit</a>
                 <a href="delete/{{ project.id }}" class="btn btn-danger delete-btn">Delete</a>
                 {% endif %}
+                <p>{{ project.index }}</p>
             </div>
         </div>
         {% endfor %}
