Use Flask-Images to resize rendered images.

--- a/server/templates/contact.html
+++ b/server/templates/contact.html
@@ -4,7 +4,7 @@
 <div class="card d-flex align-items-center">
     <img
         class="card-img-top mycard"
-        src="{{ url_for('static', filename='images/head.jpg') }}"
+        src="{{ url_for('images', filename='head.jpg', width=400) }}"
         alt="Card image cap">
     <div class="card-body">
         <h3>Marc D. Wood</h3>
