--- a/server/templates/edit_project.html
+++ b/server/templates/edit_project.html
@@ -4,7 +4,7 @@
 <div class="container d-flex justify-content-center">
     <div class="form-container">
         <h3>{{ title }}:</h3>
-        <form method="POST">
+        <form method="POST" enctype=multipart/form-data>
             {{ form.csrf_token }}
             {% for field in form.field_names %}
             <div class="form-group row">
@@ -14,6 +14,14 @@
                 </div>
             </div>
             {% endfor %}
+            {% if new %}
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label" for="photo">Upload image:</label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="file" name="photo">
+                </div>
+            </div>
+            {% endif %}
             <div class="d-flex justify-content-between align-items-center">
                 <button class="btn btn-secondary" type="submit">Submit</button>
                 <a
