Update templates for multiple blueprints and setup blog.

--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -8,7 +8,7 @@
     <div class="card-body">
         <h3>Marc D. Wood</h3>
         <h6>Software Engineer / Web Developer</h6>
-        <h5 class="card-title">Python | Flask | SQLAlchemy | REST | HTML5 | CSS | Flexbox | JavaScript | ES6 | React | Redux | JQuery</h5>
+        <h5 class="card-title">Python | Flask | SQLAlchemy | REST | HTML5 | CSS | JavaScript | ES6 | React | Redux | JQuery</h5>
         <p>Bitcoin enthusiast and developer. Currently working on a secure and deniable Bitcoin wallet project called Nowallet. In love with Python, Bitcoin and the Web. I advocate for the building and use of distributed systems where control rests with the end users. Networks are powerful. Why should some of us have less power?</p>
     </div>
 </div>
