--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -19,26 +19,40 @@
             crossorigin="anonymous">
         <link
             rel="stylesheet"
+            href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+        <link
+            rel="stylesheet"
             href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
         <div class="container">
             <nav class="nav justify-content-center align-items-center mynav grow-nav">
                 <div class="d-flex justify-content-around flex-wrap navgroup">
-                    <a class="nav-link active navlink shrink-link" href="{{ url_for('portfolio.home') }}">Home</a>
-                    <a class="nav-link navlink shrink-link" href="{{ url_for('portfolio._portfolio') }}">Portfolio</a>
-                    <a class="nav-link navlink shrink-link" href="{{ url_for('portfolio.contact_view') }}">Contact</a>
+                    <a class="nav-link active navlink shrink-link" href="{{ url_for('main.home') }}">Home</a>
+                    <a class="nav-link navlink shrink-link" href="{{ url_for('main._portfolio') }}">Portfolio</a>
+                    <a class="nav-link navlink shrink-link" href="{{ url_for('main._blog') }}">Blog</a>
+                    <a class="nav-link navlink shrink-link" href="{{ url_for('main.contact_view') }}">Contact</a>
                 </div>
 
                 <!-- Button trigger modal -->
                 {% if current_user.is_authenticated %}
-                    <div class="fixed small-stack">
-                        <a href="{{ url_for('portfolio.logout') }}" class="btn btn-secondary">Logout</a>
-                        <a href="{{ url_for('portfolio.new_project') }}" class="btn btn-success small-mtop">New</a>
+                    <div class="fixed">
+                        <a href="{{ url_for('main.logout') }}" class="btn btn-secondary">
+                            <i class="fas fa-sign-out-alt"></i></a>
+                        <a href="{{ url_for('portfolio.new_project') }}" class="btn btn-success">
+                            <i class="fas fa-code"></i></a>
+                        <a href="{{ url_for('blog.new_blogpost') }}" class="btn btn-light">
+                            <i class="fas fa-comment-alt"></i></a>
                     </div>
                 {% else %}
-                    <button type="button" class="btn btn-secondary fixed" data-toggle="modal" data-target="#exampleModal">
-                        Login
+                    <button
+                        type="button"
+                        id="btn-login"
+                        class="btn btn-secondary fixed"
+                        data-toggle="modal"
+                        data-target="#exampleModal"
+                    >
+                        <i class="fas fa-sign-in-alt"></i> Login
                     </button>
                 {% endif %}
                 
@@ -112,8 +126,8 @@
         </div>
 
         <script
-            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
@@ -123,6 +137,7 @@
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
         <script
             src="{{ url_for('static', filename='script.js') }}"></script>
     </body>
