--- a/server/templates/edit_form.html
+++ b/server/templates/edit_form.html
@@ -7,12 +7,16 @@
         <form method="POST" enctype=multipart/form-data>
             {{ form.csrf_token }}
             {% for field in form.field_names %}
-                <div class="form-group row">
-                    {{ form[field].label(class_="col-sm-4 col-form-label") }}
-                    <div class="col-sm-8">
-                        {{ form[field](class_="form-control") }}
+                {% if field == "markdown" %}
+                    {{ form[field](class_="simplemde") }}
+                {% else %}
+                    <div class="form-group row">
+                        {{ form[field].label(class_="col-sm-4 col-form-label") }}
+                        <div class="col-sm-8">
+                            {{ form[field](class_="form-control") }}
+                        </div>
                     </div>
-                </div>
+                {% endif %}
             {% endfor %}
             {% if new %}
                 <div class="form-group row">
