Make CRUD link paths dynamic.

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -26,12 +26,12 @@
     </head>
     <body>
         <div class="container">
-            <nav class="nav justify-content-center align-items-center mynav grow-nav">
+            <nav class="nav justify-content-center align-items-center mynav">
                 <div class="d-flex justify-content-around flex-wrap navgroup">
-                    <a class="nav-link active navlink shrink-link" href="{{ url_for('main.home') }}">Home</a>
-                    <a class="nav-link navlink shrink-link" href="{{ url_for('main._portfolio') }}">Portfolio</a>
-                    <a class="nav-link navlink shrink-link" href="{{ url_for('main._blog') }}">Blog</a>
-                    <a class="nav-link navlink shrink-link" href="{{ url_for('main.contact_view') }}">Contact</a>
+                    <a class="nav-link active navlink" href="{{ url_for('main.home') }}">Home</a>
+                    <a class="nav-link navlink" href="{{ url_for('main._portfolio') }}">Portfolio</a>
+                    <a class="nav-link navlink" href="{{ url_for('main._blog') }}">Blog</a>
+                    <a class="nav-link navlink" href="{{ url_for('main.contact_view') }}">Contact</a>
                 </div>
 
                 <!-- Button trigger modal -->
