--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -48,7 +48,7 @@
                     <button
                         type="button"
                         id="btn-login"
-                        class="btn btn-secondary fixed"
+                        class="btn btn-secondary fixed fade-fast hidden"
                         data-toggle="modal"
                         data-target="#exampleModal"
                     >
